--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,7 +5,12 @@ target 'ValidationTextField_Example' do
 
   target 'ValidationTextField_Tests' do
     inherit! :search_paths
+  end
+end
 
-    pod 'FBSnapshotTestCase' , '~> 2.1.4'
+post_install do |installer|
+  installer.pods_project.build_configurations.each do |config|
+    config.build_settings.delete('CODE_SIGNING_ALLOWED')
+    config.build_settings.delete('CODE_SIGNING_REQUIRED')
   end
 end
